<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/ConstraintLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/navbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:background="@color/blue_200"
            android:padding="4dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageButton
                android:id="@+id/backArrow"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:gravity="center_vertical"
                android:layout_marginStart="20dp"
                android:layout_marginTop="4dp"
                android:layout_marginBottom="4dp"
                android:contentDescription="@string/logout"
                android:src="@drawable/baseline_arrow_back_24"
                android:background="@android:color/transparent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"/>
        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
            android:id="@+id/symptomsTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="40dp"
            android:layout_marginEnd="24dp"
            android:text="@string/home_welcome"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/navbar" />

        <TextView
            android:id="@+id/symptomsDescription"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/symptoms_description"
            android:textColor="@color/black"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="@+id/symptomsTextView"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="@+id/symptomsTextView"
            app:layout_constraintTop_toBottomOf="@+id/symptomsTextView" />

        <TextView
            android:id="@+id/symptomsExample"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/symptoms_example"
            android:textColor="@color/black"
            android:textSize="14sp"
            android:textStyle="italic"
            app:layout_constraintEnd_toEndOf="@+id/symptomsTextView"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="@+id/symptomsTextView"
            app:layout_constraintTop_toBottomOf="@+id/symptomsDescription" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/symptomsEditTextCtn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            app:layout_constraintTop_toBottomOf="@+id/symptomsExample"
            app:layout_constraintStart_toStartOf="@+id/symptomsTextView"
            app:layout_constraintEnd_toEndOf="@+id/symptomsTextView">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/symptomsEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/symptoms_input_guide"
                android:inputType="textMultiLine"
                android:minLines="15"
                android:gravity="top" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/symptomsPredictBtn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:layout_marginBottom="40dp"
            android:layout_marginHorizontal="15dp"
            android:backgroundTint="@drawable/btn_color"
            app:layout_constraintTop_toBottomOf="@+id/symptomsEditTextCtn"
            app:layout_constraintStart_toStartOf="@+id/symptomsTextView"
            app:layout_constraintEnd_toEndOf="@+id/symptomsTextView"
            app:layout_constraintBottom_toBottomOf="parent"
            android:text="@string/predict" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>